# AI_project

AI-project/: README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
AI-project/src/: AI_USPTO_milestone_3_Srikanth_Naidu.ipynb  Dockerfile  Milestone1_README.md  Milestone2_README.md  Milestone3_README.md  SrikanthNaidu_PatentApplications.ipynb  app_milestone_2.py  app_milestone_3.py  patent_application.csv  patent_application_1.csv  patent_application_2.csv  patent_application_4.csv  pyproject.toml
