[project]
name = "mydetector"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Srikanth Naidu", email = "srikanth.dbit04@gmail.com" }
]
dependencies = [
    "lancedb>=0.8.2",
    "boto3>=1.34.122",
    "gradio>=4.36.0"
    ]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
