[project]
name = "USPTO"
version = "0.1.0"
description = "FINETUNING LANGUAGE MODELS - PATENTABILITY"
authors = [
    { name = "Srikanth Naidu", email = "srikanth.dbit04@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
"Homepage" = "https://github.com/srikanthnaidu1234/AI_project"
"Bug Tracker" = "https://github.com/srikanthnaidu1234/AI_project/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E266", "E501", "W503"]

[tool.poetry]
name = "USPTO"
version = "0.1.0"
description = "FINETUNING LANGUAGE MODELS - PATENTABILITY"
authors = ["Srikanth Naidu <srikanth.dbit04@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/srikanthnaidu1234/AI_project"
repository = "https://github.com/srikanthnaidu1234/AI_project"
documentation = "https://github.com/srikanthnaidu1234/AI_project"

[tool.poetry.dependencies]
python = ">=3.12"
lancedb = ">=0.8.2"
boto3 = ">=1.34.122"
gradio = ">=4.36.0"
streamlit = ">=1.22.0"
transformers = ">=4.30.0"
torch = ">=1.13.0"
plotly = ">=5.10.0"
watchdog = ">=4.0.1"
datasets = "==2.12.0"
accelerate = ">=0.18.0"
huggingface_hub = ">=0.12.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.3.1"
black = ">=23.3.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
